Implement EmployeeService.
