# src/main/kotlin/org/mycompany/hris/employee/model/CreateEmployeeResponse.kt
@@ -1,0 +1,7 @@
+package org.mycompany.hris.employee.model
+
+import org.mycompany.hris.model.EmployeeId
+
+data class CreateEmployeeResponse(
+    val employeeId: EmployeeId,
+)
