# src/main/kotlin/org/mycompany/hris/model/ErrorResponse.kt
@@ -1,0 +1,5 @@
+package org.mycompany.hris.model
+
+data class ErrorResponse(
+    val errorMessage: String,
+)
