# src/main/kotlin/org/mycompany/hris/model/Position.kt
@@ -1,0 +1,11 @@
+package org.mycompany.hris.model
+
+// For simplicity, I prepared a small list of possible positions
+enum class Position {
+    CEO,
+    CTO,
+    CPO,
+    SoftwareEngineer,
+    EngineeringManager,
+    ProductManager,
+}
